# CrabNet

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.md  Paper_FIG_1.py  Paper_FIG_2.py  Paper_FIG_3.py  Paper_FIG_4.py  Paper_SI_Figure_positional_encodings.py  Paper_TABLE_2.py  README.md  README_CrabNet.md  README_ExplainableGap.md  __init__.py  benchmark_crabnet.py  benchmark_rf.py  conda-env-cpuonly.yml  conda-env-elm2d-crabnet-pymatgen.yml  conda-env-elm2d-crabnet.yml  conda-env.yml  copy_weights.py  environment.yml  matbench_crabnet.py  matbench_rf.py  meta.yaml  plot_crabnet_densenet_classics.py  publication_results_plots.py  pyproject.toml  requirements.txt  retrain_classics.py  retrain_rf.py  run_grayskull.py  setup.py  train_ann.py  train_classics.py  train_crabnet.py  use_crabnet.py  use_densenet.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: automerge.yml  codeql-analysis.yml  conda-build-pytest.yml  dependabot-ci.yml  flit-install-test.yml  manual-conda-publish.yml  manual-coverage.yml  manual-release.yml  os-matrix.yml  test-publish-release.yml
crabnet/: __init__.py  crabnet_.py  fixup_grayskull.py  kingcrab.py  meta.yaml  model.py  train_crabnet.py
crabnet/data/: get_dataset_size.py
crabnet/examples/: README.rst  crabnet_basic.py  extend_features_compare.py
crabnet/tests/: test_crabnet.py  test_crabnet_.py  test_hyperparameters.py
crabnet/utils/: composition.py  data.py  estimatorselectionhelper.py  figures.py  get_compute_device.py  get_core_count.py  modelselectionhelper.py  utils.py
data/: all_elements.csv  df_benchmark.csv  df_matbench_cv.csv  get_dataset_size.py
data/element_properties/: oliynyk.csv  onehot.csv  ptable_ismayc.csv
data/matbench/: castelli.csv  expt_gap.csv  mp_e_form.csv  (+3 more)
docs/: CNAME
examples/: README.rst  crabnet_basic.py  crabnet_basic_colab.ipynb  crabnet_teaching.py  extend_features_compare.py  matbench_expt_gap.py  subcrab_teaching.py
figures/: README.rst
metrics/: all_metrics.csv  get_predictions_metrics.py
model_predictions/: example_materials_property_test_output.csv  example_materials_property_train_output.csv  example_materials_property_val_output.csv
models/: ann.py  crabnet.py  data.py  neuralnetwrapper.py
publication_CrabNet/: Paper_FIG_1.py  Paper_FIG_2.py  Paper_SI_Figure_positional_encodings.py  Paper_TABLE_2.py  benchmark_crabnet.py  benchmark_rf.py  matbench_crabnet.py  matbench_rf.py  retrain_rf.py  train_crabnet.py
publication_ExplainableGap/: generate_attention_videos.py  get_crabnet_embeddings.py  get_dataset_stats.py  get_training_attention.py  guess_oxidation.py  plot_element_correlation.py  plot_global_edm_umap.py  plot_local_edm_umap.py
utils/: composition.py  estimatorselectionhelper.py  figures.py  get_compute_device.py  get_core_count.py  modelselectionhelper.py  optim.py  utils.py
(+1520 files in other folders)
